<resources>
    <string name="app_name">pokedex-DDM</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="j_registrado_fa_a_seu_login">Já registrado? Faça seu login!</string>
    <string name="n_o_possui_uma_conta_cadastre_se">Não possui uma conta? Cadastre-se!</string>
    <string name="login">Login</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="pokemon_detail">Detalhes do Pokémon</string>
    <string name="salvar_imagem">Salvar Imagem</string>
    <string name="favoritar">Favoritar</string>
</resources>